--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>SOLOR +</title>
 </head>
     <body>
-
+        <div class="main">
+            <div class="container">
+                <div class="main__info">
+                    <div class="main__info-logo">
+                        <img src="./img/logo/лого (1) 1.png" alt="">
+                    </div>
+                    <div class="main__info-title">
+                        <div class="main__title-slogan">
+                            <p>Зеленый тариф для дома и бизнеса</p>
+                        </div>
+                        <div class="main__title-company">
+                            <h2>Солнечная электростанция</h2>
+                            <h3>с доходом от 1000 $ в месяц</h3>
+                        </div>
+                        <div class="main__title-enroll">
+                            <a href="#">записаться на консультацию</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
