--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>SOLOR +</title>
+    <link rel="stylesheet" href="./scss/css/style.css">
+    <title>SOLOR+</title>
 </head>
     <body>
         <div class="main">
             <div class="container">
                 <div class="main__info">
                     <div class="main__info-logo">
-                        <img src="./img/logo/лого (1) 1.png" alt="">
+                        <img src="img/logo/logo.png" alt="#">
                     </div>
                     <div class="main__info-title">
                         <div class="main__title-slogan">
@@ -23,7 +25,16 @@
                             <h3>с доходом от 1000 $ в месяц</h3>
                         </div>
                         <div class="main__title-enroll">
+                            <a class="title__enroll-arrow" href=""><img src="./img/strelka/Group%2025.svgclo" alt=""></a>
                             <a href="#">записаться на консультацию</a>
+                        </div>
+                    </div>
+                    <div class="main__contact">
+                        <div class="main__contact-links">
+                            <a href="#"><img src="img/tel/instagram.svg" alt="#"></a>
+                            <a href="#"><img src="img/tel/telegram.svg" alt="#"></a>
+                            <a href="#"><img src="img/tel/whatsapp.svg" alt="#"></a>
+                            <a href="#"><img src="img/tel/facebook.svg" alt="#"></a>
                         </div>
                     </div>
                 </div>
