--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>SOLOR+</title>
 </head>
     <body>
@@ -25,16 +28,22 @@
                             <h3>с доходом от 1000 $ в месяц</h3>
                         </div>
                         <div class="main__title-enroll">
-                            <a class="title__enroll-arrow" href=""><img src="./img/strelka/Group%2025.svgclo" alt=""></a>
+                            <div class="title__enroll-arrow">
+                                <a href="">
+                                    <button> 
+                                        <img src="./img/strelka/Arrow 3.png" alt="">
+                                    </button>
+                                </a>
+                            </div>
                             <a href="#">записаться на консультацию</a>
                         </div>
                     </div>
                     <div class="main__contact">
                         <div class="main__contact-links">
-                            <a href="#"><img src="img/tel/instagram.svg" alt="#"></a>
-                            <a href="#"><img src="img/tel/telegram.svg" alt="#"></a>
-                            <a href="#"><img src="img/tel/whatsapp.svg" alt="#"></a>
-                            <a href="#"><img src="img/tel/facebook.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/instagram.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/telegram.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/whatsapp.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/facebook.svg" alt="#"></a>
                         </div>
                     </div>
                 </div>
