--- a/index.html
+++ b/index.html
@@ -49,5 +49,36 @@
                 </div>
             </div>
         </div>
+        <div class="services">
+            <div class="container">
+                <div class="services__title">
+                    <h4>Услуги</h4>
+                </div>
+                <div class="services__info">
+                    <div class="services__info-text">
+                        <div class="info__text-block">
+                            <h5>Полный комплект солнечной электростанции</h5>
+                            <p>74 модели солнечных панелей, 31 модель инверторов, провода с повышенной устойчивостью к атмосферным условиям, качественные соединители, контроллеры зарядов и надежные гелевые аккумуляторы с увеличенным сроком службы.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <h5>Подбор оборудования с максимальной производительностью</h5>
+                            <p>Подбираем солнечные панели с учетом расположения Вашего дома, количеством прямого и рассеянного излучения, для того, чтобы Ваша электростанция - вырабатывала максимальное количество электроэнергии и окупилась как можно быстрее.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <h5>Монтаж оборудования в соответствии с ГОСТом</h5>
+                            <p>Монтаж производится в точном соответствии с ГОСТом, с учетом закона о «Зеленом тарифе» и требованиями Облэнерго. При этом, мы учитываем, чтобы солнечная станция имела максимально возможную производительность.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <h5>Помощь в подключении к «Зеленому тарифу»</h5>
+                            <p>Всю бюрократическую процедуру по подключению Вашей электростанции к «Зеленому тарифу», мы берем на себя, в том числе по увеличению договорной мощности вашего дома. При заказе солнечной электростанции эта услуга абсолютно бесплатна.</p>
+                        </div>
+                    </div>
+                    <div class="services__text-img">
+                        <img src="./img/services/Rectangle 7.svg" alt="#">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </body>
 </html>
