add Green Tariff

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="services">
             <div class="container">
                 <div class="services__title">
-                    <h4>Услуги</h4>
+                    <h4>УСЛУГИ</h4>
                 </div>
                 <div class="services__info">
                     <div class="services__info-text">
@@ -79,6 +79,59 @@
                 </div>
             </div>
         </div>
+        <div class="rate">
+            <div class="container">
+                <div class="rate__title">
+                    <h4>ЗЕЛЕНЫЙ ТАРИФ</h4>
+                </div>
+                <div class="rate__info">
+                    <div class="rate__wrapper-info">    
+                        <div class="info__wrapper-block">
+                            <div class="wrapper__block-one">
+                                <div class="block__one-link">
+                                    <a href="">продажа</a>
+                                    <a href="">закрепление</a>
+                                    <a href="">ограничения</a>
+                                </div>
+                                <div class="block__one-desc">
+                                    <div class="one__desc-img">
+                                        <img src="./img/green rate/Rectangle 9.svg  " alt="">
+                                    </div>
+                                    <div class="one__desc-excerpt">
+                                        <p>Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).</p>
+                                        <div class="desc__excerpt-img">
+                                            <img src="./img/strelka/Arrow 2.svg" alt="">
+                                            <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="block__one-lead">
+                                    <div class="one__lead-pros">
+                                        <h5>Гарантия выкупа</h5>
+                                        <p>Гарантированный выкуп электроэнергии государством - прописано в НКРЕ №447 </p>
+                                    </div>
+                                    <div class="one__lead-pros">
+                                        <h5>Долгосрочно</h5>
+                                        <p>это проект, поддерживаемый международными инвестиционными организациями</p>
+                                    </div>
+                                    <div class="one__lead-pros">
+                                        <h5>Вид вложения</h5>
+                                        <p>Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых</p>
+                                    </div>
+                                    <div class="one__lead-pros">
+                                        <h5>Высокая ставка</h5>
+                                        <p>Самая высокая тарифная ставка в европе - 0,16 евро</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text__block-two">
+                                <p>«Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.</p>
+                                <img src="./img/green rate/Rectangle 8.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
