--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -127,6 +125,50 @@
                             <div class="text__block-two">
                                 <p>«Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.</p>
                                 <img src="./img/green rate/Rectangle 8.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="container">
+                <div class="quote__text">
+                    <h2>«Солнечная электростанция — идеальное вложение средств в свою энергонезависимость ипассивный доход»</h2>
+                </div>
+            </div>
+        </div>
+        <div class="aside">
+            <div class="container">
+                <div class="clients__title">
+                    <h4>НАШИ КЛИЕНТЫ</h4>
+                </div>
+                <div class="aside__clients">
+                    <div class="aside__clients-info">
+                        <div class="aside__info-img">
+                            <img src="./img/aside/house.jpg" alt="">
+                            <div class="info__img-arrow">
+                                <img src="./img/strelka/Arrow 2.svg" alt="">
+                                <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="aside__meta">
+                        <h5>Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу</h5>
+                        <div class="aside__meta-text">
+                            <p>Расположение: Харьковская обл., г. Харьков</p>
+                            <p>Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</p>
+                            <p>Смонтирована: апрель 2017 г.</p>
+                            <p>Срок службы: 25-30 лет</p>
+                        </div>
+                        <div class="aside__button-control">
+                            <div class="button__control-arrow">
+                                <a href="#">записаться на консультацию</a>
+                                <a href="">
+                                    <button> 
+                                        <img src="./img/strelka/black arrow.png" alt="">
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
