--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -133,5 +131,96 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="container">
+                <div class="quote__text">
+                    <h2>«Солнечная электростанция — идеальное вложение средств в свою энергонезависимость ипассивный доход»</h2>
+                </div>
+            </div>
+        </div>
+        <div class="aside">
+            <div class="container">
+                <div class="clients__title">
+                    <h4>НАШИ КЛИЕНТЫ</h4>
+                </div>
+                <div class="aside__clients">
+                    <div class="aside__clients-info">
+                        <div class="aside__info-img">
+                            <img src="./img/aside/house.jpg" alt="">
+                            <div class="info__img-arrow">
+                                <img src="./img/strelka/Arrow 2.svg" alt="">
+                                <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="aside__meta">
+                        <h5>Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу</h5>
+                        <div class="aside__meta-text">
+                            <p>Расположение: Харьковская обл., г. Харьков</p>
+                            <p>Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</p>
+                            <p>Смонтирована: апрель 2017 г.</p>
+                            <p>Срок службы: 25-30 лет</p>
+                        </div>
+                        <div class="aside__button-control">
+                            <div class="button__control-arrow">
+                                <a href="#">записаться на консультацию</a>
+                                <a href="">
+                                    <button> 
+                                        <img src="./img/strelka/black arrow.png" alt="">
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="services">
+            <div class="container">
+                <div class="services__info">
+                    <div class="services__info-text">
+                        <h4>5 ШАГОВ К СОБСТВЕННОЙ ЭЛЕКТРОСТАНЦИИ</h4>
+                        <div class="info__text-block">
+                            <div class="text__block-number">
+                                <p>01</p>
+                            </div>
+                            <h5>Заявка или звонок</h5>
+                            <p>Оставляете заявку на нашем сайте или связываетесь с нами по телефону или в мессенджерах.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <div class="text__block-number">
+                                <p>02</p>
+                            </div>
+                            <h5>Консультация и замер на объекте</h5>
+                            <p>Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем участке, чтобы предложить Вам один наиболее выгодный.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <div class="text__block-number">
+                                <p>03</p>
+                            </div>
+                            <h5>Заключение договора</h5>
+                            <p>Заключается договор, благодаря которому, вы будете застрахованы от некачественного оборудования и срыва сроков.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <div class="text__block-number">
+                                <p>04</p>
+                            </div>
+                            <h5>Монтаж СЭС</h5>
+                            <p>Наши специалисты производят монтаж солнечных батарей, проводки и инверторов, при необходимости изготавливают опоры.</p>
+                        </div>
+                        <div class="info__text-block">
+                            <div class="text__block-number">
+                                <p>05</p>
+                            </div>
+                            <h5>Получение дохода от государства</h5>
+                            <p>После подключения к «Зеленому тарифу», вы получаете доход за каждый киловатт, выработанный на Вашей солнечной электростанции по зафиксированному тарифу на момент подключения.</p>
+                        </div>
+                    </div>
+                    <div class="services__text-img">
+                        <img src="./img/services/house and car.svg" alt="#">
+                    </div>
+                </div>
+            </div>
+        </div>  
     </body>
 </html>
