--- a/index.html
+++ b/index.html
@@ -221,6 +221,51 @@
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
+        <div class="footer">
+            <div class="container">
+                <div class="footer__wrap">
+                    <div class="footer__reg">
+                        <div class="footer__reg-request">
+                            <h5>ОСТАВИТЬ ЗАЯВКУ</h5>
+                            <div class="footer__input">
+                                <input type="text" placeholder="Имя" name="name" id="name">
+                            </div>
+                            <div class="footer__input">
+                                <input type="tel" placeholder="Телефон" id="pass" >
+                            </div>
+                            <div class="footer__enroll">
+                                <div class="footer__enroll-arrow">
+                                    <a href="">
+                                        <button> 
+                                            <img src="./img/strelka/Arrow 3.png" alt="">
+                                        </button>
+                                    </a>
+                                </div>
+                                <a href="#">оставить зоявку</a>
+                            </div>
+                        </div>
+                        <div class="footer__reg-contact">
+                            <h5>КОНТАКТЫ</h5>
+                            <p>Центральный офис:<br>г. Москва, ул,Гоголя 13, 1й этаж</p>
+                            <p>Представительство в Киеве:<br>г. Киев, ул. Є. Коновальця, 103 оф. 410</p>
+                            <p>Представительства в Харькове, Одессе, Ростове, Сочи, Белгороде</p>
+                            <p>+7 987 654-54-56<br>+38 067 504-32-57</p>
+                            <p>Ежедневно 08:00 - 20:00</p>
+                        </div>
+                    </div>
+                    <div class="footer__copyrigth">
+                        <a href="">Политика конфиденциальности</a>
+                        <img src="./img/logo/logo.png" alt="">
+                        <div class="footer__copyrigth-socials">
+                            <a href="#"><img src="img/contact/instagram.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/telegram.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/whatsapp.svg" alt="#"></a>
+                            <a href="#"><img src="img/contact/facebook.svg" alt="#"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
