--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </div>
                     <div class="main__contact">
                         <div class="main__contact-links">
-                            <a href="#"><img src="img/contact/instagram.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/telegram.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/whatsapp.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/facebook.svg" alt="#"></a>
+                            <a href="https://www.instagram.com"><img src="img/contact/instagram.svg" alt="instagram"></a>
+                            <a href="https://web.telegram.org/z/"><img src="img/contact/telegram.svg" alt="telegram"></a>
+                            <a href="https://www.whatsapp.com/?lang=ru"><img src="img/contact/whatsapp.svg" alt="whatsapp"></a>
+                            <a href="https://m.facebook.com/login/?locale2=ru_RU"><img src="img/contact/facebook.svg" alt="facebook"></a>
                         </div>
                     </div>
                 </div>
@@ -52,26 +52,26 @@
                 <div class="services__title">
                     <h4>УСЛУГИ</h4>
                 </div>
-                <div class="services__info">
-                    <div class="services__info-text">
-                        <div class="info__text-block">
+                <div class="services__wrapper">
+                    <div class="services__description">
+                        <div class="services__description-text">
                             <h5>Полный комплект солнечной электростанции</h5>
                             <p>74 модели солнечных панелей, 31 модель инверторов, провода с повышенной устойчивостью к атмосферным условиям, качественные соединители, контроллеры зарядов и надежные гелевые аккумуляторы с увеличенным сроком службы.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <h5>Подбор оборудования с максимальной производительностью</h5>
                             <p>Подбираем солнечные панели с учетом расположения Вашего дома, количеством прямого и рассеянного излучения, для того, чтобы Ваша электростанция - вырабатывала максимальное количество электроэнергии и окупилась как можно быстрее.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <h5>Монтаж оборудования в соответствии с ГОСТом</h5>
                             <p>Монтаж производится в точном соответствии с ГОСТом, с учетом закона о «Зеленом тарифе» и требованиями Облэнерго. При этом, мы учитываем, чтобы солнечная станция имела максимально возможную производительность.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <h5>Помощь в подключении к «Зеленому тарифу»</h5>
                             <p>Всю бюрократическую процедуру по подключению Вашей электростанции к «Зеленому тарифу», мы берем на себя, в том числе по увеличению договорной мощности вашего дома. При заказе солнечной электростанции эта услуга абсолютно бесплатна.</p>
                         </div>
                     </div>
-                    <div class="services__text-img">
+                    <div class="services__img">
                         <img src="./img/services/Rectangle 7.svg" alt="#">
                     </div>
                 </div>
@@ -82,50 +82,50 @@
                 <div class="rate__title">
                     <h4>ЗЕЛЕНЫЙ ТАРИФ</h4>
                 </div>
-                <div class="rate__info">
-                    <div class="rate__wrapper-info">    
-                        <div class="info__wrapper-block">
-                            <div class="wrapper__block-one">
-                                <div class="block__one-link">
-                                    <a href="">продажа</a>
-                                    <a href="">закрепление</a>
-                                    <a href="">ограничения</a>
-                                </div>
-                                <div class="block__one-desc">
-                                    <div class="one__desc-img">
-                                        <img src="./img/green rate/Rectangle 9.svg  " alt="">
-                                    </div>
-                                    <div class="one__desc-excerpt">
-                                        <p>Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).</p>
-                                        <div class="desc__excerpt-img">
-                                            <img src="./img/strelka/Arrow 2.svg" alt="">
-                                            <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="block__one-lead">
-                                    <div class="one__lead-pros">
-                                        <h5>Гарантия выкупа</h5>
-                                        <p>Гарантированный выкуп электроэнергии государством - прописано в НКРЕ №447 </p>
-                                    </div>
-                                    <div class="one__lead-pros">
-                                        <h5>Долгосрочно</h5>
-                                        <p>это проект, поддерживаемый международными инвестиционными организациями</p>
-                                    </div>
-                                    <div class="one__lead-pros">
-                                        <h5>Вид вложения</h5>
-                                        <p>Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых</p>
-                                    </div>
-                                    <div class="one__lead-pros">
-                                        <h5>Высокая ставка</h5>
-                                        <p>Самая высокая тарифная ставка в европе - 0,16 евро</p>
-                                    </div>
+                <div class="rate__wrapper">
+                    <div class="rate__description">
+                        <div class="rate__nav">
+                            <a href="">продажа</a>
+                            <a href="">закрепление</a>
+                            <a href="">ограничения</a>
+                        </div>
+                        <div class="rate__thumbnail">
+                            <div class="rate__thumbnail-img">
+                                <img src="./img/green rate/a solar panel.svg " alt="">
+                            </div>
+                            <div class="rate__action">
+                                <p>Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).</p>
+                                <div class="rate__action-img">
+                                    <img src="./img/strelka/Arrow 2.svg" alt="">
+                                    <img class="action__img-reverce" src="./img/strelka/Arrow 2.svg" alt="">
                                 </div>
                             </div>
-                            <div class="text__block-two">
-                                <p>«Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.</p>
-                                <img src="./img/green rate/Rectangle 8.svg" alt="">
+                        </div>
+                        <div class="rate__advantage">
+                            <div class="rate__advantage-text">
+                                <h5>Гарантия выкупа</h5>
+                                <p>Гарантированный выкуп электроэнергии государством - прописано в НКРЕ №447 </p>
                             </div>
+                            <div class="rate__advantage-text">
+                                <h5>Долгосрочно</h5>
+                                <p>это проект, поддерживаемый международными инвестиционными организациями</p>
+                            </div>
+                            <div class="rate__advantage-text">
+                                <h5>Вид вложения</h5>
+                                <p>Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых</p>
+                            </div>
+                            <div class="rate__advantage-text">
+                                <h5>Высокая ставка</h5>
+                                <p>Самая высокая тарифная ставка в европе - 0,16 евро</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rate__definition">
+                        <div class="rate__definition-text">
+                            <p>«Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.</p>
+                        </div>
+                        <div class="rate__definition-img">
+                            <img src="./img/green rate/house.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="quote">
             <div class="container">
-                <div class="quote__text">
+                <div class="quote__title">
                     <h2>«Солнечная электростанция — идеальное вложение средств в свою энергонезависимость ипассивный доход»</h2>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                 <div class="aside__clients">
                     <div class="aside__clients-info">
                         <div class="aside__info-img">
-                            <img src="./img/aside/house.jpg" alt="">
+                            <img class="info__img-house" src="./img/aside/house.jpg" alt="">
                             <div class="info__img-arrow">
                                 <img src="./img/strelka/Arrow 2.svg" alt="">
                                 <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
@@ -177,38 +177,38 @@
         </div>
         <div class="services">
             <div class="container">
-                <div class="services__info">
-                    <div class="services__info-text">
-                        <h4>5 ШАГОВ К СОБСТВЕННОЙ ЭЛЕКТРОСТАНЦИИ</h4>
-                        <div class="info__text-block">
+                <div class="services__wrapper">
+                    <div class="services__description">
+                            <h4>5 ШАГОВ К СОБСТВЕННОЙ ЭЛЕКТРОСТАНЦИИ</h4>
+                        <div class="services__description-text">
                             <div class="text__block-number">
                                 <p>01</p>
                             </div>
                             <h5>Заявка или звонок</h5>
                             <p>Оставляете заявку на нашем сайте или связываетесь с нами по телефону или в мессенджерах.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <div class="text__block-number">
                                 <p>02</p>
                             </div>
                             <h5>Консультация и замер на объекте</h5>
                             <p>Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем участке, чтобы предложить Вам один наиболее выгодный.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <div class="text__block-number">
                                 <p>03</p>
                             </div>
                             <h5>Заключение договора</h5>
                             <p>Заключается договор, благодаря которому, вы будете застрахованы от некачественного оборудования и срыва сроков.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <div class="text__block-number">
                                 <p>04</p>
                             </div>
                             <h5>Монтаж СЭС</h5>
                             <p>Наши специалисты производят монтаж солнечных батарей, проводки и инверторов, при необходимости изготавливают опоры.</p>
                         </div>
-                        <div class="info__text-block">
+                        <div class="services__description-text">
                             <div class="text__block-number">
                                 <p>05</p>
                             </div>
@@ -216,7 +216,7 @@
                             <p>После подключения к «Зеленому тарифу», вы получаете доход за каждый киловатт, выработанный на Вашей солнечной электростанции по зафиксированному тарифу на момент подключения.</p>
                         </div>
                     </div>
-                    <div class="services__text-img">
+                    <div class="services__img">
                         <img src="./img/services/house and car.svg" alt="#">
                     </div>
                 </div>
@@ -225,8 +225,8 @@
         <div class="footer">
             <div class="container">
                 <div class="footer__wrap">
-                    <div class="footer__reg">
-                        <div class="footer__reg-request">
+                    <div class="footer__form">
+                        <div class="footer__form-request">
                             <h5>ОСТАВИТЬ ЗАЯВКУ</h5>
                             <div class="footer__input">
                                 <input type="text" placeholder="Имя" name="name" id="name">
@@ -245,7 +245,7 @@
                                 <a href="#">оставить зоявку</a>
                             </div>
                         </div>
-                        <div class="footer__reg-contact">
+                        <div class="footer__form-contact">
                             <h5>КОНТАКТЫ</h5>
                             <p>Центральный офис:<br>г. Москва, ул,Гоголя 13, 1й этаж</p>
                             <p>Представительство в Киеве:<br>г. Киев, ул. Є. Коновальця, 103 оф. 410</p>
@@ -256,12 +256,12 @@
                     </div>
                     <div class="footer__copyrigth">
                         <a href="">Политика конфиденциальности</a>
-                        <img src="./img/logo/logo.png" alt="">
+                        <img src="./img/logo/logo.png" alt="logo">
                         <div class="footer__copyrigth-socials">
-                            <a href="#"><img src="img/contact/instagram.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/telegram.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/whatsapp.svg" alt="#"></a>
-                            <a href="#"><img src="img/contact/facebook.svg" alt="#"></a>
+                            <a href="https://www.instagram.com"><img src="img/contact/instagram.svg" alt="instagram"></a>
+                            <a href="https://web.telegram.org/z/"><img src="img/contact/telegram.svg" alt="telegram"></a>
+                            <a href="https://www.whatsapp.com/?lang=ru"><img src="img/contact/whatsapp.svg" alt="whatsapp"></a>
+                            <a href="https://m.facebook.com/login/?locale2=ru_RU"><img src="img/contact/facebook.svg" alt="facebook"></a>
                         </div>
                     </div>
                 </div>
