--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                             <div class="title__enroll-arrow">
                                 <a href="">
                                     <button> 
-                                        <img src="./img/strelka/Arrow 3.png" alt="">
+                                        <img src="./img/arrows/whitearrow.svg.png" alt="">
                                     </button>
-                                </a>
+                                </a> 
                             </div>
                             <a href="#">записаться на консультацию</a>
                         </div>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="services__img">
-                        <img src="./img/services/Rectangle 7.svg" alt="#">
+                        <img src="./img/services/solar panel.svg" alt="#">
                     </div>
                 </div>
             </div>
@@ -96,8 +96,8 @@
                             <div class="rate__action">
                                 <p>Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).</p>
                                 <div class="rate__action-img">
-                                    <img src="./img/strelka/Arrow 2.svg" alt="">
-                                    <img class="action__img-reverce" src="./img/strelka/Arrow 2.svg" alt="">
+                                    <img src="./img/arrows/smallarrow.svg" alt="">
+                                    <img class="action__img-reverce" src="./img/arrows/smallarrow.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -148,8 +148,8 @@
                         <div class="aside__info-img">
                             <img class="info__img-house" src="./img/aside/house.jpg" alt="">
                             <div class="info__img-arrow">
-                                <img src="./img/strelka/Arrow 2.svg" alt="">
-                                <img class="arrow__reverce" src="./img/strelka/Arrow 2.svg" alt="">
+                                <img src="./img/arrows/smallarrow.svg" alt="">
+                                <img class="arrow__reverce" src="./img/arrows/smallarrow.svg" alt="">
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                 <a href="#">записаться на консультацию</a>
                                 <a href="">
                                     <button> 
-                                        <img src="./img/strelka/black arrow.png" alt="">
+                                        <img src="./img/arrows/black arrow.png" alt="">
                                     </button>
                                 </a>
                             </div>
@@ -238,7 +238,7 @@
                                 <div class="footer__enroll-arrow">
                                     <a href="">
                                         <button> 
-                                            <img src="./img/strelka/Arrow 3.png" alt="">
+                                            <img src="./img/arrows/whitearrow.svg.png" alt="">
                                         </button>
                                     </a>
                                 </div>
