--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <p>Всю бюрократическую процедуру по подключению Вашей электростанции к «Зеленому тарифу», мы берем на себя, в том числе по увеличению договорной мощности вашего дома. При заказе солнечной электростанции эта услуга абсолютно бесплатна.</p>
                         </div>
                     </div>
-                    <div class="services__img">
+                    <div class="services__img _mobile-img">
                         <img src="./img/services/solar panel.svg" alt="#">
                     </div>
                 </div>
@@ -146,7 +146,9 @@
                 <div class="aside__clients">
                     <div class="aside__clients-info">
                         <div class="aside__info-img">
-                            <img class="info__img-house" src="./img/aside/house.jpg" alt="">
+                            <div class="info__img-house">
+                                <img src="./img/aside/house.svg" alt="">
+                            </div>
                             <div class="info__img-arrow">
                                 <img src="./img/arrows/smallarrow.svg" alt="">
                                 <img class="arrow__reverce" src="./img/arrows/smallarrow.svg" alt="">
@@ -177,7 +179,7 @@
         </div>
         <div class="services">
             <div class="container">
-                <div class="services__wrapper">
+                <div class="services__wrapper _bg-service">
                     <div class="services__description">
                             <h4>5 ШАГОВ К СОБСТВЕННОЙ ЭЛЕКТРОСТАНЦИИ</h4>
                         <div class="services__description-text">
